<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.jalsahitsnain.fragments.IslamiFragment"
    tools:showIn="@layout/fragment_islami">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/id_home_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:gravity="top">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="220dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_bg"
                        android:src="@drawable/bg_header_daylight"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/jadwal_sholat"
                        android:textColor="@android:color/white"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:id="@+id/progress_bar"
                        android:indeterminate="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"/>
                </FrameLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="start"
                        android:layout_marginTop="100dp"
                        android:layout_marginLeft="20dp">
                        <TextView
                            android:id="@+id/tv_nama_daerah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/ic_place"
                            android:text="@string/namadaerah"
                            android:textColor="@android:color/white"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end"
                        android:layout_marginTop="100dp"
                        android:layout_marginRight="20dp">
                        <TextView
                            android:id="@+id/tv_tanngal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/ic_date"
                            android:fontFamily="monospace"
                            android:text="Tanggal"
                            android:textColor="@android:color/white"
                            android:textSize="10sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView"
                        android:layout_margin="10dp">
                        <TableRow android:layout_margin="5dp">
                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView"
                                android:layout_weight="1"
                                android:text="Subuh" />
                            <TextView
                                android:id="@+id/txtSubuh"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="00:00 WIB"
                                android:textStyle="bold"/>
                            <ImageView
                                android:id="@+id/img_subuh"
                                android:src="@drawable/ic_volume"/>
                        </TableRow>
                        <TableRow android:layout_margin="5dp">
                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/dzuhur" />
                            <TextView
                                android:id="@+id/txtDzuhur"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="00:00 WIB"
                                android:textStyle="bold"/>
                            <ImageView
                                android:id="@+id/img_zuhur"
                                android:src="@drawable/ic_volume"/>
                        </TableRow>
                        <TableRow android:layout_margin="5dp">
                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Ashar" />
                            <TextView
                                android:id="@+id/txtAshar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="00:00 WIB"
                                android:textStyle="bold" />
                            <ImageView
                                android:id="@+id/img_ashar"
                                android:src="@drawable/ic_volume"/>
                        </TableRow>
                        <TableRow android:layout_margin="5dp">
                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/magrib" />
                            <TextView
                                android:id="@+id/txtMaghrib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="00:00 WIB"
                                android:textStyle="bold"/>
                            <ImageView
                                android:id="@+id/img_magrhib"
                                android:src="@drawable/ic_volume"/>
                        </TableRow>
                        <TableRow android:layout_margin="5dp">
                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/isya" />
                            <TextView
                                android:id="@+id/txtIsya"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="00:00 WIB"
                                android:textStyle="bold"/>
                            <ImageView
                                android:id="@+id/img_isya"
                                android:src="@drawable/ic_volume"/>
                        </TableRow>
                    </TableLayout>
                </androidx.cardview.widget.CardView>
                <!-- menu 0-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:id="@+id/cvKiblat">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/img_arah_kabah"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:src="@drawable/kaaba"
                                android:padding="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/arah_kabah" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:id="@+id/cvQuran">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/img_al_quran"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:src="@drawable/quran" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/baca_alquran" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!--  menu 1-->
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>